# polymath-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py
app/admin/: create_agent.py
app/routers/: graph.py
app/services/: auth.py
tests/: a_note_on_tests.md  auth_key_test.sh  conftest.py  test_graph_router.py
