[project]
name = "polymath-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "neomodel>=6.0.0",
    "polymath-schemas>=0.2.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
